Initial commit for documentation (only FR)

--- a/_posts/docs/5-3/2020-05-18-5-3-fr.md
+++ b/_posts/docs/5-3/2020-05-18-5-3-fr.md
@@ -6,3 +6,252 @@ layout: docs
 ref: 5-3
 permalink: /fr/docs/5_3
 ---
+
+# Documentation d'EyesOfNetwork 5.3
+
+**⚠ Documentation en cours de rédaction ⚠**
+
+EyesOfNetwork (“EON”) est la solution Open Source réunissant de manière pragmatique les processus ITIL et l’interface technologique permettant leur application. EyesOfNetwork Supervision est la première brique d’une gamme de produits bâtie autour de la gestion des évènements, de la disponibilité, des problèmes et de la capacité.
+
+Le “bundle” EyesOfNetwork est composé d’un système d’exploitation minimaliste incluant un ensemble intégré d’applications répondant aux différents besoins de supervision :
+
+* GED (Generic Event Dispatcher) : gestion multi sites et sécurisée des évènements,
+* NAGIOS : gestion des incidents et des problèmes,
+* THRUK : interface de supervision multibackend,
+* NAGVIS : cartographie personnalisée de la disponibilité,
+* THUKBP : gestion de la criticité des applications,
+* GRAFANA & INFLUXDB : gestion des performances,
+* BACKUP MANAGER : Outil de sauvegarde de la solution,
+* EONWEB : Interface Web unifiée de la solution,
+* SNMPTT : Traduction des traps snmp,
+* GLPI / OCS / FUSION : Gestion de parc et inventaire.
+
+EyesOfNetwork est accessible via une interface Web unique dont l’objectif est de réunir les différents acteurs d’un système d’informations (DSI, Administrateurs, Techniciens, Opérateurs, …). Chacun des ces acteurs dispose d’une vue correspondant à son métier. Toutes les informations sont consolidées en Base de Données.
+
+EyesOfNetwork est un produit sous licence GPL2 sponsorisé et proposé par AXIANS dans le cadre de prestations de services (Intégration, Télé-service, Support téléphonique et Tierce Maintenance Applicative).
+
+Site internet : [https://www.eyesofnetwork.com/](https://www.eyesofnetwork.com/)
+
+## Installation
+
+EyesOfNetwork est livré sous forme d'une *appliance* prete à l'emploi. En version 5.3, deux modes d'installation sont officiellement supporté.
+
+### Installation par image ISO
+
+Le mode d'installation par image ISO 
+
+### Installation par Ansible
+
+## Administration
+
+### Création d'un équipement
+
+### Création d'un service
+
+### Création d'une commande Nagios
+
+### Création d'un modèle d'équipement
+
+### Création d'un modèle de service
+
+### Restauration d'une sauvegarde de base de données
+
+### Installation d'une ressource RPM Tiers
+
+
+
+## Utilisation
+
+### Génération d'un rapport
+
+### Création d'un acquittement
+
+## Migrations
+
+### 4.x vers 5.3
+
+#### Migration des bases de données
+
+> La migration concerne plusieurs bases de données. Les bases de données essentielles sont lilac et eonweb. Il est inutile de migrer les bases de données cacti, ged ou nagiosbp si ces outils n'étaient pas utilisés.
+
+##### Export des bases de données
+
+Export de la base lilac
+
+``` bash
+mysqldump -u root --password=root66 lilac > lilac.sql   
+```
+
+Export de la base eonweb
+
+``` bash
+mysqldump -u root --password=root66 eonweb > eonweb.sql    
+```
+
+Export d'une base de données
+
+``` bash
+mysqldump -u root --password=root66 XXX > XXX.sql                  
+```
+
+##### Copie des bases d'un serveur EON à l'autre
+
+``` bash
+scp lilac.sql root@servEON5.3:/root/
+scp eonweb.sql root@servEON5.3:/root/
+scp XXXX.sql root@servEON5.3:/root/
+```
+
+Avant de procéder à l'importation de l'ancienne base sur le nouveau EON. Il est préférable de faire un export de la base de données actuelle.
+
+``` bash
+mysqldump -u root --password=root66 lilac > /root/lilac-fresh.sql
+mysqldump -u root --password=root66 eonweb > /root/eonweb-fresh.sql
+mysqldump -u root --password=root66 XXXX > /root/XXXX-fresh.sql
+```
+
+##### Import des bases de données
+
+**Importer** les bases de données exportées vers le nouveau serveur EON. Il est conseillé de commencé par l'import de la base de données lilac.
+
+``` bash
+mysql -u root -proot66 < lilac.sql
+mysql -u root -proot66 eonweb < eonweb.sql
+mysql -u root -proot66 XXX < XXX.sql
+```
+
+#### Migration des Plugins EON
+
+Création d'une archive contenant l'ensemble des plugins
+
+``` bash
+tar -cvzf /root/plugin.tar.gz /srv/eyesofnetwork/nagios/plugins/
+```
+
+Copie du fichier sur l'autre EON
+
+``` bash
+scp plugin.tar.gz root@servEON5.3:/root/
+```
+
+Extraire l'archive
+
+``` bash
+tar xvf plugin.tar.gz
+```
+
+Copie des fichiers dans le répertoire /nagios/plugins
+
+``` bash
+cp -p -v -u * /srv/eyesofnetwork/nagios/plugins/ 
+```
+
+> Copie uniquement les fichiers qui sont plus récents que les fichiers de destination ou les fichiers manquants.
+
+#### Vérification après l'importation
+
+Vérifier que l'application de la configuration fonctionne correctement.
+
+> Administration > Appliquer la configuration > Restart
+
+Des erreurs peuvent survenir lors de l'actualisation de l'EON 5.3
+
+Exemple ci-dessous :
+
+![Erreur1](/img/2020-06-19-erreur1.png)
+
+Cela est à cause d'un changement de version trop important 
+Il est possible d'obtenir la version de lilac sur le serveur EON avec la commande :
+
+``` bash
+Rpm -qi lilac
+```
+
+Pour résoudre le problème, il faut modifier les **permissions** du fichier lilac-conf.php
+
+``` bash
+ls -la /srv/eyesofnetwork/lilac/includes/lilac-conf.php
+chmod 777 /srv/eyesofnetwork/lilac/includes/lilac-conf.php
+chown apache /srv/eyesofnetwork/lilac/includes/lilac-conf.php
+```
+
+Une autre fenêtre d'erreur doit apparaitre, celle-ci indique que la version de la base de données n'est pas à jour.
+
+![Erreur2](/img/2020-06-19-erreur2.png)
+
+Cliquer sur **Update** installation
+
+![Erreur3](/img/2020-06-19-erreur3.png)
+
+Cliquer sur **Launch lilac-reloaded update site**
+
+**Répéter** cette opération tant que la version n'est pas à jour.
+
+![Erreur4](/img/2020-06-19-erreur4.png)
+
+Une fois que cette fenêtre apparait, les versions sont à jour.
+
+Cliquer sur click **here**
+
+#### Vérifications
+
+Aller dans :
+
+> Administration > Configuration Nagios > Equipements > Lister
+
+L'ensemble des équipements de l'ancien EON doivent être présents sur le nouveau.
+
+Aller dans :
+
+> Administration > Configuration Nagios > Nagios Commands
+
+L'ensemble des commandes de l'ancien EON doivent être présentes sur le nouveau.
+
+Pour appliquer la configuration, aller dans :
+
+> Administration > Appliquer la configuration > Restart
+
+###### Copie des sauvegardes de l'ancien EON sur le nouveau
+
+Attention, Il faut vérifier la **volumétrie** des sauvegardes avant l'exécution du transfert car cela peut surcharger le nouveau EON.
+
+Copier les fichiers présents dans /var/archives
+
+``` bash
+scp /var/archives/servEON4.1.XXXX.tar.gz root@servEON5.3:/var/archives
+```
+
+#### Installation du VMware perl SDK
+
+Télécharger le fichier .rpm et copier le sur le serveur EON
+
+``` bash
+mv VMware-vSphere-Perl-SDK-6.5.0.rpm /srv/eyesofnetworkrepo/extras/
+cd /srv/eyesofnetworkrepo/extras/
+createrepo --update /srv/eyesofnetowrkrepo/extras/
+yum clean all
+yum repolist
+```
+
+Le champ "eon-extras" doit apparaitre avec une valeur à 1, ce qui correspond à notre nouveau paquet. En cas d'erreur à cette étape, voir la procédure ci-dessous
+
+``` bash
+yum install VMware-vSphere-Perl-SDK
+```
+
+###### Si le paquet n'est pas répertorié par la commande yum repolist
+
+``` bash
+vim /etc/yum.repos.d/EyesOfNetwork.repo
+sed -i "enabled=0/enabled=1/g" /etc/yum.repos.d/EyesOfNetwork.repo
+yum clean all
+yum repolist
+```
+
+###### Vérifier le fonctionnement du plugin :
+
+``` bash
+su - nagios
+cd /srv/eyesofnetwork/nagios/plugin
+./check_vmware_esx.pl -D 10.140.XX.XX --name=XXXXX -u XXXXX -p XXXXXXX --select=cpu --subselect=usage
+```
