--- a/_posts/docs/5-3/2020-05-18-5-3-fr.md
+++ b/_posts/docs/5-3/2020-05-18-5-3-fr.md
@@ -158,7 +158,7 @@ Des erreurs peuvent survenir lors de l'actualisation de l'EON 5.3
 
 Exemple ci-dessous :
 
-![Erreur1](/img/2020-06-19-erreur1.png)
+![Erreur1](/img/docs/5-3/2020-06-19-erreur1.png)
 
 Cela est à cause d'un changement de version trop important 
 Il est possible d'obtenir la version de lilac sur le serveur EON avec la commande :
@@ -177,17 +177,17 @@ chown apache /srv/eyesofnetwork/lilac/includes/lilac-conf.php
 
 Une autre fenêtre d'erreur doit apparaitre, celle-ci indique que la version de la base de données n'est pas à jour.
 
-![Erreur2](/img/2020-06-19-erreur2.png)
+![Erreur2](/img/docs/5-3/2020-06-19-erreur2.png)
 
 Cliquer sur **Update** installation
 
-![Erreur3](/img/2020-06-19-erreur3.png)
+![Erreur3](/img/docs/5-3/2020-06-19-erreur3.png)
 
 Cliquer sur **Launch lilac-reloaded update site**
 
 **Répéter** cette opération tant que la version n'est pas à jour.
 
-![Erreur4](/img/2020-06-19-erreur4.png)
+![Erreur4](/img/docs/5-3/2020-06-19-erreur4.png)
 
 Une fois que cette fenêtre apparait, les versions sont à jour.
 
