--- a/_posts/docs/5-3/2020-08-25-5-3-doc_EON.md
+++ b/_posts/docs/5-3/2020-08-25-5-3-doc_EON.md
@@ -13,28 +13,28 @@ permalink: /fr/docs/5_3
 
 Un Hôte représente un équipement (un serveur, un switch, un onduleur, …) sur une infrastructure.
 
-![Accueil](/img/docs/5-3/2020-08-25-accueil_eon.png)
+![Accueil](/img/docs/5-3/2020-08-25-accueil_eon.PNG)
 
-![addHostBtn](/img/docs/5-3/2020-08-25-add_host_btn.png)
-![addHost](/img/docs/5-3/2020-08-25-add_host.png)
+![addHostBtn](/img/docs/5-3/2020-08-25-add_host_btn.PNG)
+![addHost](/img/docs/5-3/2020-08-25-add_host.PNG)
 
 ## b)Création d&#39;un Host Template
 
 Un « Host Template » permet de définir des paramètres pour un type d&#39;équipements. L&#39;une des bonnes pratiques, est de définir le maximum d&#39;éléments dans ces Template (L&#39;appartenance à un groupe, la définition des services, … ).
 
-![TemplateBtn](/img/docs/5-3/2020-08-25-template_btn.png)
+![TemplateBtn](/img/docs/5-3/2020-08-25-template_btn.PNG)
 
-![HostTemplate](/img/docs/5-3/2020-08-25-host_template.png)
+![HostTemplate](/img/docs/5-3/2020-08-25-host_template.PNG)
 
 Dans le menu « **Inheritance** », du Host template une fois créé, vous devrez toujours ajouter le template **GENERIC\_HOST au minimum**. Vous devriez obtenir un résultat similaire à la capture ci-dessous.
 
-![Erreur1](/img/docs/5-3/2020-08-25-host_template_conf.png)
+![Erreur1](/img/docs/5-3/2020-08-25-host_template_conf.PNG)
 
 Dans le menu « Services », Vous pourrez ajouter des services permettant d&#39;effectuer des tests sur les équipements qui hériteront de ce template. En cliquant sur le bouton ci-dessous, vous allez créer un service pour ce template.
 
-![Erreur1](/img/docs/5-3/2020-08-25-host_template_service.png) 
+![Erreur1](/img/docs/5-3/2020-08-25-host_template_service.PNG) 
 
-![Erreur1](/img/docs/5-3/2020-08-25-create_service.png)
+![Erreur1](/img/docs/5-3/2020-08-25-create_service.PNG)
 
 ## c) Créer une commande
 
@@ -44,30 +44,30 @@ Une commande permet d&#39;effectuer des tests sur les équipements. Les commande
 - **$USERi$** : (_ou i est un entier)_ sont des Variables que vous pouvez définir dans le menu « **Nagios Resources** » de « **Eonweb Configurator** »
 - **$ARGi$** : (_ou i est un entier)_ sont des variables que vous définissez lors de la création du service.
 
-![Erreur1](/img/docs/5-3/2020-08-25-commande_btn.png)
-![Erreur1](/img/docs/5-3/2020-08-25-create_cmd.png)
+![Erreur1](/img/docs/5-3/2020-08-25-commande_btn.PNG)
+![Erreur1](/img/docs/5-3/2020-08-25-create_cmd.PNG)
 
 Pour tester ces scripts, vous pouvez aller dans «_ **/srv/eyesofnetwork/nagios/plugins** _ » et executer la commande avec l&#39;option « –help » pour voir les options nécéssaires. Un ensemble de check sont également disponible sur le net. Vous avez juste à les placer dans ce même dossier et à modifier ses droits (Exemple : _ **chown nagios:eyesofnetwork script\_name.pl** _).
 
 ## d)Enregistrer la configuration
 
 Appliquer la configuration est nécessaire afin que Nagios prenne en compte les modifications effectuées. En haut à droite lorsque vous êtes dans le menu "Configurations nagios", vous avez une barre de menu qui apparait avec l’onglet outils qui vous permet d’appliquer la configuration. 
-![Erreur1](/img/docs/5-3/2020-08-25-apply_config_menu.png)
-![Erreur1](/img/docs/5-3/2020-08-25-apply_config.png)
+![Erreur1](/img/docs/5-3/2020-08-25-apply_config_menu.PNG)
+![Erreur1](/img/docs/5-3/2020-08-25-apply_config.PNG)
 
 Vous devriez avoir un résultat similaire à la capture d&#39;écran ci-dessous si tout s&#39;est bien passé.
 
-![Erreur1](/img/docs/5-3/2020-08-25-apply_config_result.png)
+![Erreur1](/img/docs/5-3/2020-08-25-apply_config_result.PNG)
 
 Sinon, cela signifie que l&#39;un des ajouts ou modifications effectué n&#39;est pas correctement paramétré. (Cela est souvent dû à l&#39;oubli de l&#39;application d&#39;un Template à l&#39;un de vos équipements). Pour avoir plus d&#39;informations, vous avez la console de log en bas de la page, en appuyant sur le bouton « recharger » :
 
-![Erreur1](/img/docs/5-3/2020-08-25-reload.png) Vous devriez voir apparaître des éléments supplémentaires dans la console des logs afin de voir où l&#39;application de la configuration a échouée.
+![Erreur1](/img/docs/5-3/2020-08-25-reload.PNG) Vous devriez voir apparaître des éléments supplémentaires dans la console des logs afin de voir où l&#39;application de la configuration a échouée.
 
 ## e) Gestion des processus
 
 Il est possible que vous ayez à redémarrer des processus comme nagios, httpd et autres. Pour cela l&#39;interface EON offre dans le menu : Administration ==> Généralités ==> Processus, une interface permettant de verifier le bon fonctionnement des processus et d&#39;effectuer les actions les plus courante d&#39;un administrateur :
 
- ![Erreur1](/img/docs/5-3/2020-08-25-process.png)
+ ![Erreur1](/img/docs/5-3/2020-08-25-process.PNG)
 
 
 Les boutons permettent d&#39;effectuer les actions en lignes de commandes suivantes :
@@ -79,7 +79,7 @@ Le premier bouton **« Stopper »** par exemple **,** nous montre que le service
 
 
 /!\ Le bouton « Vérifier » est spécifique à nagios et permet de vérifier différente information sur nagios via la fenêtre de log qui s&#39;affiche en bas de la page après avoir effectué une action.(Voir figure ci-dessous)
-![Erreur1](/img/docs/5-3/2020-08-25-process_log.png)
+![Erreur1](/img/docs/5-3/2020-08-25-process_log.PNG)
 
 ## f) Notifications Avancées
 
@@ -89,11 +89,11 @@ Pour utiliser les notifications avancées, cliquez sur « Administration » dans
 
 Ajout :
 
-![Erreur1](/img/docs/5-3/2020-08-25-add_notif.png)
+![Erreur1](/img/docs/5-3/2020-08-25-add_notif.PNG)
 
 Vous pouvez cliquer sur le bouton période du menu supérieur puis le sous menu « lister ». Vous arriverez sur la page ci-dessus. Si vous voulez ajouter une règle, cliquez sur le bouton ajouter (la page ci-dessous s&#39;affichera).
 
-![Erreur1](/img/docs/5-3/2020-08-25-add_period.png)
+![Erreur1](/img/docs/5-3/2020-08-25-add_period.PNG)
 
 Afin d&#39;ajouter une période de notification, cliquez sur le bouton [période] du menu supérieur de la page. Ensuite pour ajouter une période de notification, il faut cliquer sur le sous menu « ajouter ». Une fois ces actions effectuées, vous allez être redirigés vers un formulaire d&#39;ajout de période de notification que l&#39;on peut voir sur l&#39;image ci-dessus.
 
@@ -101,10 +101,10 @@ Modification :
 
 Si vous voulez modifier une période de notification, cliquez sur son nom (Comme sur l&#39;image ci-dessous).
 
-![Erreur1](/img/docs/5-3/2020-08-25-modif_period.png)
+![Erreur1](/img/docs/5-3/2020-08-25-modif_period.PNG)
 Vous allez donc arriver sur la page ci-dessous.
 
-![Erreur1](/img/docs/5-3/2020-08-25-modif_period_int.png)
+![Erreur1](/img/docs/5-3/2020-08-25-modif_period_int.PNG)
 
 
 Dans ce formulaire, l&#39;unique champ obligatoire est le nom de la période de notification (1). Le Second champ (2) permet de définir les jours de notification de votre période. Le lien « All / None » permet de tout sélectionner ou désélectionner rapidement. Enfin le dernier champ Heure de notification permet de définir les heures de début et de fin des périodes de notification (3). Pour ajouter des périodes, sélectionnés à l&#39;aide des différents menus déroulants surlignés en jaune le début et la fin de la période. Une fois ceci réalisé, cliquez sur le bouton « Add » pour l&#39;ajouter à la liste située à gauche du bouton « Delete ». Le delete, lui permet de supprimer la période sélectionnée. On peut remarquer un bouton « All » à droite des listes déroulantes. Ce bouton permet de définir la période en 24/24. Une petite étoile s&#39;ajoutera alors à la liste. Avant de cliquer sur « Add », assurez-vous que la ou les périodes sont toutes sélectionnées comme sur l&#39;image ci-dessus. Dans le cas où aucune heure de notification est ajouté, la valeur ajouté sera «-».
@@ -113,7 +113,7 @@ Si on se fie à l&#39;exemple ci-dessus, notre période de notification HO fonct
 
 ##### Périodes de notification : Supression
 
-![Erreur1](/img/docs/5-3/2020-08-25-delete_period.png)
+![Erreur1](/img/docs/5-3/2020-08-25-delete_period.PNG)
 
 1. Dans un premier temps, il vous suffit de cocher les différentes périodes de notification que vous souhaitez supprimer
 2. Ensuite, cliquez sur le bouton « Supprimer »
@@ -124,11 +124,11 @@ Si tout s&#39;est bien passé, un message s&#39;affichera pour vous confirmer la
 
 Ajout :
 
-![Erreur1](/img/docs/5-3/2020-08-25-method_global.png)
+![Erreur1](/img/docs/5-3/2020-08-25-method_global.PNG)
 
 Vous pouvez cliquer sur le bouton période du menu supérieur puis les sous menus « lister ». Vous arriverez sur la page ci-dessus. Si vous voulez ajouter une règle, cliquez sur le bouton ajouter (la page ci-dessous s&#39;affichera).
 
-![Erreur1](/img/docs/5-3/2020-08-25-add_method.png)
+![Erreur1](/img/docs/5-3/2020-08-25-add_method.PNG)
 
 Afin d&#39;ajouter une méthode de notification, cliquez sur le bouton « Méthodes » du menu supérieur de la page. Ensuite pour ajouter une méthode de notification, il faut sélectionner « ajouter une méthode d&#39;équipement » ou « ajouter une méthode de service » dans le sous menu. Une fois ces actions effectuées, vous allez être redirigés vers un formulaire d&#39;ajout de méthode que l&#39;on peut voir sur l&#39;image ci-dessus.
 
@@ -136,17 +136,17 @@ Modification :
 
 Si vous voulez modifier une méthode de notification, cliquez sur son nom (Comme sur l&#39;image ci-dessous).
 
-![Erreur1](/img/docs/5-3/2020-08-25-modify_method_btn.png)
+![Erreur1](/img/docs/5-3/2020-08-25-modify_method_btn.PNG)
 
 Vous allez donc arriver sur la page ci-dessous.
 
-![Erreur1](/img/docs/5-3/2020-08-25-modify_method.png)
+![Erreur1](/img/docs/5-3/2020-08-25-modify_method.PNG)
 
 Dans ce formulaire, les champs obligatoires sont la Nom de la méthode (1) et la ligne de commande (3). Le Second champ (2) est défini automatiquement en fonction du type de la method (service ou host). Enfin le dernier champ ligne de commande (3).
 
 ##### Méthodes de notification : Supression
 
-![Erreur1](/img/docs/5-3/2020-08-25-delete_method.png)
+![Erreur1](/img/docs/5-3/2020-08-25-delete_method.PNG)
 
 1. Dans un premier temps, il vous suffit de cocher les différentes méthodes de notification que vous souhaitez supprimer
 2. Ensuite, sélectionner l&#39;option « Supprimer »
@@ -154,7 +154,7 @@ Dans ce formulaire, les champs obligatoires sont la Nom de la méthode (1) et la
 
 ##### Règles de notification : Ordre des notifications
 
-![Erreur1](/img/docs/5-3/2020-08-25-notif_order.png)
+![Erreur1](/img/docs/5-3/2020-08-25-notif_order.PNG)
 
 Lors du chargement de la page d&#39;index, vous arriverez sur la page ci-dessus. Vous pouvez cliquer sur le bouton « Règle » du menu supérieur puis le sous menu « lister ». Vous arriverez sur la page ci-dessus. Si vous voulez ajouter une règle, cliquez sur le bouton ajouter (la page ci-dessous s&#39;affichera).
 
@@ -162,7 +162,7 @@ La règle la plus en haut du tableau est la règle prioritaire (de niveau 0). Po
 
 ##### Règles de notification : Ajout / Modification
 
-![Erreur1](/img/docs/5-3/2020-08-25-rule.png)
+![Erreur1](/img/docs/5-3/2020-08-25-rule.PNG)
 
 Ajout :
 
@@ -174,7 +174,7 @@ Modification :
 
 Si vous voulez modifier une règle de notification, cliquez sur son nom.
 
- ![Erreur1](/img/docs/5-3/2020-08-25-add_rule.png)
+ ![Erreur1](/img/docs/5-3/2020-08-25-add_rule.PNG)
 
 Les champs Nom, période de notification et méthodes de notification sont obligatoires dans ce formulaire. Tout champs non obligatoire n&#39;étant pas rempli prendra la valeur «-».
 
@@ -193,7 +193,7 @@ Sinon pour les champs contact, équipement, service, vous pouvez saisir vous-mê
 
 ##### Règles de notification : Supression
 
-![Erreur1](/img/docs/5-3/2020-08-25-del_rule.png)
+![Erreur1](/img/docs/5-3/2020-08-25-del_rule.PNG)
 
 1. Dans un premier temps, il vous suffit de cocher les différentes règles que vous souhaitez supprimer
 2. Ensuite, sélectionner l&#39;option « Supprimer »
@@ -204,11 +204,11 @@ Si tout s&#39;est bien passé, un message s&#39;affichera pour vous confirmer la
 
 Ajout :
 
-![Erreur1](/img/docs/5-3/2020-08-25-param.png)
+![Erreur1](/img/docs/5-3/2020-08-25-param.PNG)
 
 Vous pouvez cliquer sur le bouton « outils » du menu supérieur puis le sous menu « Contacts désactivés ». Vous arriverez sur la page ci-dessus. Si vous voulez ajouter une règle, cliquez sur le bouton ajouter (la page ci-dessous s&#39;affichera).
 
-![Erreur1](/img/docs/5-3/2020-08-25-param_contact.png)
+![Erreur1](/img/docs/5-3/2020-08-25-param_contact.PNG)
 
 Dans ce formulaire, l&#39;unique champ obligatoire est le Nom du contact (1). Le Second champ (2) permet de définir le niveau de débogage. Une fois les champs modifiés, cliquez sur le bouton « Ajouter ».
 
@@ -216,14 +216,14 @@ Modification :
 
 Si vous voulez modifier un contact à désactiver, cliquez sur son nom (Comme sur l&#39;image ci-dessous).
 
-![Erreur1](/img/docs/5-3/2020-08-25-modif_contact.png)
+![Erreur1](/img/docs/5-3/2020-08-25-modif_contact.PNG)
 
 
 Dans ce formulaire, l&#39;unique champ obligatoire est le Nom du contact (1). Le Second champ (2) permet de définir le niveau de débogage. Une fois les champs modifiés, cliquez sur le bouton Modifier.
 
 ##### Désactivation d&#39;un contact : Supression
 
-![Erreur1](/img/docs/5-3/2020-08-25-del_contact.png)
+![Erreur1](/img/docs/5-3/2020-08-25-del_contact.PNG)
 
 1. Dans un premier temps, il vous suffit de cocher les différentes périodes de notification que vous souhaitez supprimer
 2. Ensuite, cliquez sur le bouton « Supprimer »
@@ -235,4 +235,4 @@ Dans ce formulaire, l&#39;unique champ obligatoire est le Nom du contact (1). Le
 
 Pour appliquer la configuration, il vous suffit de cliquer sur le bouton « outils » du menu supérieur puis sur le bouton « appliquer la configuration » du sous menu. Une fois ceci fait, vous tomberez sur l&#39;aperçu ci-dessous. Les deux zones de texte correspondent aux fichiers de configuration des notifications.
 
-![Erreur1](/img/docs/5-3/2020-08-25-apply_notif.png)
+![Erreur1](/img/docs/5-3/2020-08-25-apply_notif.PNG)
