:pencil: Add documentation

--- a/_posts/docs/5-3/2020-05-18-5-3-fr.md
+++ b/_posts/docs/5-3/2020-05-18-5-3-fr.md
@@ -68,6 +68,88 @@ Le mode d'installation par image ISO
 
 ## Migrations
 
+### 5.2 vers 5.3
+
+#### 5.2 installater avec ansible
+
+Mise à jour du repo EyesOfNetwork
+``` bash
+sed -i 's+repos/5+repos/5.3+g' /etc/yum.repos.d/EyesOfNetwork.repo
+```
+
+Mise à jour de EyesOfNetwork
+``` bash
+yum update
+```
+
+#### 5.2 installater avec l'iso
+
+##### Ajouts et modifications des repo nécessaires
+
+Ajout du repo grafana
+``` bash
+cat <<EOF | sudo tee /etc/yum.repos.d/grafana.repo
+[grafana]
+name=grafana
+baseurl=https://packages.grafana.com/oss/rpm
+repo_gpgcheck=1
+enabled=1
+gpgcheck=1
+gpgkey=https://packages.grafana.com/gpg.key
+sslverify=1
+sslcacert=/etc/pki/tls/certs/ca-bundle.crt 
+EOF
+```
+
+Ajout du repo influxdb
+``` bash
+cat <<EOF | sudo tee /etc/yum.repos.d/influxdb.repo
+[influxdb]
+name = InfluxDB Repository - RHEL \$releasever
+baseurl = https://repos.influxdata.com/rhel/\$releasever/\$basearch/stable
+enabled = 1
+gpgcheck = 1
+gpgkey = https://repos.influxdata.com/influxdb.key
+EOF
+```
+
+Mise à jour du repo EyesOfNetwork
+``` bash
+sed -i 's+repos/5+repos/5.3+g' /etc/yum.repos.d/EyesOfNetwork.repo
+```
+
+Mise à jour de EyesOfNetwork
+``` bash
+yum update
+```
+
+##### Configuration grafana
+
+Execution du script qui met en place les configuration nécessaire pour grafana
+``` bash
+/srv/eyesofnetworkconf/grafana/grafanaconf.sh &>/dev/null
+```
+
+``` bash
+systemctl restart httpd
+```
+
+Execution de grafana au démarrage et active grafana  
+``` bash
+systemctl enable --now grafana-server
+```
+
+Configuration de la base de données
+``` bash
+mysql -u root -proot66 lilac < /srv/eyesofnetworkconf/grafana/grafana.sql
+```
+Appliquer la configuration
+
+
+On migre ensuite les anciennes données afin de pouvoir les afficher sur grafana
+``` bash
+/srv/eyesofnetwork/nagflux/migrate_pnp_to_nagflux.pl
+```
 ### 4.x vers 5.3
 
 #### Migration des bases de données
