Change order, add usage
Signed-off-by: Rémi VERCHERE <remi.verchere@axians.com>

--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -11,15 +11,29 @@ permalink: /fr/docs/eoa/2_0
 
 **⚠ Documentation en cours de rédaction ⚠**
 
-## Installation
+- [Prérequis](#prérequis)
+- [Installation](#installation)
+  * [EOA](#eoa)
+  * [Configuration SSH](#configuration-ssh)
+  * [Configuration d’Eyes Of Network](#configuration-d-eyes-of-network)
+  * [Selenium](#selenium)
+    + [PowerShell - DotNet](#powershell---dotnet)
+    + [C# Packages](#c--packages)
+    + [Browser Packages](#browser-packages)
+  * [Utilisation et Tests](#utilisation-et-tests)
+- [Création de scénarios](#création-de-scénarios)
+  * [Clients Lourds](#clients-lourds)
+  * [Sites Web](#sites-web)
 
-Dans cette documentation, nous verrons comment installer EOA ainsi que son utilisation sur Windows.
-
-### Pré-requis
+## Prérequis
 
 EOA a besoin des paquets "Redistribuable Visual C++ pour Visual Studio 2015" pour fonctionner correctement.
 
 Téléchargez et installez les applications `vc_redist.x64.exe` et `vc_redist.x86.exe`, disponibles sur le site officiel Microsoft [ici](https://www.microsoft.com/fr-fr/download/details.aspx?id=48145).
+
+## Installation
+
+Dans cette documentation, nous verrons comment installer EOA ainsi que son utilisation sur Windows.
 
 ### EOA
 
@@ -125,6 +139,30 @@ Votre service doit heriter du template de service "GENERIC_PASSIVE"
 
 Ces services récupèrerons les informations qu’enverra EOA à EON, ce sont des services passifs.
 
+### Selenium
+
+EOA permet de gérer des scénarios basé sur des copies d'écrans, mais également avec Selenium pour les services web.
+
+#### PowerShell - DotNet
+
+Selenium need PowerShell 4.0 at least. If you run EOA on Windows7, please update PowerShell following this link: https://www.microsoft.com/fr-FR/download/details.aspx?id=40855.
+
+You also need the Microsoft .NET Framework 4.5, available here: https://www.microsoft.com/fr-fr/download/details.aspx?id=30653
+
+#### C# Packages
+
+EOA uses Selenium C# package, so you have to download and install it:
+- Download Selenium Client & WebDriver Language Bindings, C# version: https://www.seleniumhq.org/download/
+- Extract file (rename `.nupkg` to `.zip`)
+- Copy `WebDriver.dll` and  `WebDriver.Support.dll` to the selenium folder
+
+#### Browser Packages
+
+Selenium needs web browsers to work:
+- Download IE, Firefox or Chrome driver from the Selenium download page: https://www.seleniumhq.org/download/
+- Extract and copy drivers to the selenium folder
+
+
 ### Utilisation et Tests
 
 Maintenant que la configuration est terminée, passons à l’utilisations d’EOA. EOA Simule un utilisateur, le script fait une recherche d’image puis clique et si elle ne la trouve pas, l’envoie à EON. Rendez-vous sur votre poste Windows.
@@ -182,26 +220,10 @@ escape_html_tags=0
 # systemctl restart httpd
 ```
 
-## Selenium
+## Création de scénarios
 
-EOA permet de gérer des scénarios basé sur des copies d'écrans, mais également avec Selenium pour les services web.
+### Clients Lourds
 
-### PowerShell - DotNet
+### Sites Web
 
-Selenium need PowerShell 4.0 at least. If you run EOA on Windows7, please update PowerShell following this link: https://www.microsoft.com/fr-FR/download/details.aspx?id=40855.
-
-You also need the Microsoft .NET Framework 4.5, available here: https://www.microsoft.com/fr-fr/download/details.aspx?id=30653
-
-### C# Packages
-
-EOA uses Selenium C# package, so you have to download and install it:
-- Download Selenium Client & WebDriver Language Bindings, C# version: https://www.seleniumhq.org/download/
-- Extract file (rename `.nupkg` to `.zip`)
-- Copy `WebDriver.dll` and  `WebDriver.Support.dll` to the selenium folder
-
-### Browser Packages
-
-Selenium needs web browsers to work:
-- Download IE, Firefox or Chrome driver from the Selenium download page: https://www.seleniumhq.org/download/
-- Extract and copy drivers to the selenium folder
 
