change security layout page to a new one

--- a/_posts/security/fr/2020-08-02-XSS.md
+++ b/_posts/security/fr/2020-08-02-XSS.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: "XSS 1"
-desc: "Faille XSS dans eonweb / Localisation : module/module_frame/index.php / Paramètre d'injection : url / Niveau : Moyen "
+desc: "Faille XSS dans eonweb"
+localisation: "module/module_frame/index.php"
+parametre: "url"
+niveau: "Medium"
 ref: XSS-1
 categories: [security, EyesOfNetwork]
 lang: fr
