--- a/_posts/security/fr/2020-08-02-CSRF.md
+++ b/_posts/security/fr/2020-08-02-CSRF.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: "CSRF 1"
-desc: "Faille CSRF dans eonweb / Localisation : module/module_frame/index.php / Paramètre d'injection : url / Niveau : Faible "
+desc: "Faille CSRF dans eonweb"
+localisation: "module/module_frame/index.php"
+parametre: "url"
+niveau: "Low"
 ref: CSRF-1
 categories: [security, EyesOfNetwork]
 lang: fr
