:books: add english doc and modify layout security

--- a/_posts/security/fr/2020-08-02-CSRF.md
+++ b/_posts/security/fr/2020-08-02-CSRF.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: security
 title: "CSRF 1"
 desc: "Faille CSRF dans eonweb"
 localisation: "module/module_frame/index.php"
