Add eoa web doc
Signed-off-by: Rémi VERCHERE <remi.verchere@axians.com>

--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -141,27 +141,30 @@ Ces services récupèrerons les informations qu’enverra EOA à EON, ce sont de
 
 ### Selenium
 
-EOA permet de gérer des scénarios basé sur des copies d'écrans, mais également avec Selenium pour les services web.
+EOA permet de gérer des scénarios basé sur des copies d'écrans. Cependant, on peut également utiliser l'outil Selenium pour gérer des scénarios web.
 
 #### PowerShell - DotNet
 
-Selenium need PowerShell 4.0 at least. If you run EOA on Windows7, please update PowerShell following this link: https://www.microsoft.com/fr-FR/download/details.aspx?id=40855.
+Selenium a besoin de PowerShell 4.0 mininum pour fonctionner. Si vous utilisez EOA sur Windows7, mettez à jour PowerShell, disponible ici : https://www.microsoft.com/fr-FR/download/details.aspx?id=40855.
 
-You also need the Microsoft .NET Framework 4.5, available here: https://www.microsoft.com/fr-fr/download/details.aspx?id=30653
+Vous aurez également besoin du Framework .NET 4.5, disponibles ici: https://www.microsoft.com/fr-fr/download/details.aspx?id=30653
 
 #### C# Packages
 
-EOA uses Selenium C# package, so you have to download and install it:
-- Download Selenium Client & WebDriver Language Bindings, C# version: https://www.seleniumhq.org/download/
-- Extract file (rename `.nupkg` to `.zip`)
-- Copy `WebDriver.dll` and  `WebDriver.Support.dll` to the selenium folder
+EOA utilise les paquets Selenium C#. Il vous faut télécharger et installer:
+- Selenium Client & WebDriver Language Bindings, C# version: https://www.seleniumhq.org/download/
+- Extraire les fichiers (en renommant `.nupkg` en `.zip`)
+- Copier `WebDriver.dll` et `WebDriver.Support.dll` dans le dossier `C:\Axians\EOA\selenium`
 
 #### Browser Packages
 
-Selenium needs web browsers to work:
-- Download IE, Firefox or Chrome driver from the Selenium download page: https://www.seleniumhq.org/download/
-- Extract and copy drivers to the selenium folder
+Selenium a besoin des paquets drivers navigatur pour fonctionner:
+- Télécharger les drivers IE, Firefox or Chrome dspuies la page de téléchargement Selenium : https://www.seleniumhq.org/download/
+- Extraire et copier les drivers dans le dossier `C:\Axians\EOA\selenium`
 
+#### Plugin Selenium
+
+Pour générer les scénarios, on utilisera un plugin navigateur web, comme par exemple [Katalon Recorder](https://addons.mozilla.org/fr/firefox/addon/katalon-automation-record/) pour Firefox.
 
 ### Utilisation et Tests
 
@@ -222,8 +225,86 @@ escape_html_tags=0
 
 ## Création de scénarios
 
-### Clients Lourds
+Pour la création de scénarios, nous avons 2 possibilités:
+- Copie d'Ecran : pour les clients lourds
+- Selenium : pour les sites web
 
-### Sites Web
+On pourra utiliser la Copie d'Ecran pour les sites web, mais cela n'est pas conseillé.
 
+L'exemple ci-après se fait depuis le site [EyesOfNetwork](https://www.eyesofnetwork.com), avec les actions suivantes:
+1. Lancement du navigateur
+1. Recherche et affichage de la page "Téléchargement"
+1. Recherche et affichage de la dernière release note 5.3
+1. Recherche et affichage de la documentation
+
+### Copie d'Ecran
+
+#### Création du scénario
+
+#### Mise en forme dans EOA
+
+### Selenium
+
+#### Création du scénario
+
+Pour créer le scénario, nous utilisons le module navigateur "Katalon", voici ensuite la démarche à suivre:
+
+1. Lancer Katalon et créer un scénarion de test
+
+![Screenshot(/img/docs/eoa-2-0/katalon01.png)
+
+2. Lancer l'enregistrement
+3. Dérouler le scénario:
+- Click sur Téléchargements
+- Click sur Release Notes
+- Click sur Documentation
+
+4. Arrêter l'enregistrement
+
+![Screenshot(/img/docs/eoa-2-0/katalon02.png)
+
+Le scénario est maintenant disponible dans Katalon, il faut maintenant le transformer en script EOA.
+
+#### Mise en forme dans EOA
+
+Depuis la console Katalon, cliquer sur "Export", au format "C# (WebDriver + MSTest) pour avoir le code exploitable par Selenium & les navigateurs. 
+
+![Screenshot(/img/docs/eoa-2-0/katalon03.png)
+
+Rechercher ensuite la fonction `public void TheEOATest` ou équivalent, et sauvegarder les fonctions de type `driver.FindElement`, qui correspondent à votre scénario. Dans notre cas ce sera :
+
+```csharp
+[TestMethod]
+public void TheEOATest()
+{
+    driver.FindElement(By.LinkText("Télécharger")).Click();
+    driver.FindElement(By.LinkText("Release Note")).Click();
+    driver.FindElement(By.XPath("//button[@type='button']")).Click();
+    driver.FindElement(By.LinkText("Documentation")).Click();
+}
+```
+
+Chaque fonction sera à mettre en forme dans un script ps1 dans le dossier `C:\Axians\EOA\apps`
+
+On va ensuite "traduire" les fonctions pour que cela tourne sur EOA. Par exemple, `driver.FindElement(By.LinkText("Télécharger")).Click();` deviendra `$WebDriver.FindElementByLinkText("Télécharger").Click();`.
+
+`driver.FindElement(By` -> `$WebDriver.FindElementBy`
+
+L'équivalent plus haut sera alors le suivant:
+
+```powershell
+$WebDriver.FindElementByLinkText("Télécharger").Click();
+$WebDriver.FindElementByLinkText("Release Note").Click();
+$WebDriver.FindElementByXPath("//button[@type='button']").Click();
+$WebDriver.FindElementByLinkText("Documentation").Click();
+```
+
+En découpant les actions, pour mesure, on aura par exemple pour la 1ère action:
+
+```powershell
+$cmd = Measure-Command {
+  AddValues "INFO" "Click on Download Login"
+  $WebDriver.FindElementByLinkText("Télécharger").Click();
+}
+$Chrono += [math]::Round($cmd.TotalSeconds,6)
 
