--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -237,13 +237,13 @@ L'exemple ci-après se fait depuis le site [EyesOfNetwork](https://www.eyesofnet
 1. Recherche et affichage de la dernière release note 5.3
 1. Recherche et affichage de la documentation
 
-### Copie d'Ecran
+### Clients Lourds
 
 #### Création du scénario
 
 #### Mise en forme dans EOA
 
-### Selenium
+### Sites Web
 
 #### Création du scénario
 
