--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -251,7 +251,7 @@ Pour créer le scénario, nous utilisons le module navigateur "Katalon", voici e
 
 1. Lancer Katalon et créer un scénarion de test
 
-![Screenshot(/img/docs/eoa-2-0/katalon01.png)
+![Screenshot](/img/docs/eoa-2-0/katalon01.png)
 
 2. Lancer l'enregistrement
 3. Dérouler le scénario:
@@ -261,7 +261,7 @@ Pour créer le scénario, nous utilisons le module navigateur "Katalon", voici e
 
 4. Arrêter l'enregistrement
 
-![Screenshot(/img/docs/eoa-2-0/katalon02.png)
+![Screenshot](/img/docs/eoa-2-0/katalon02.png)
 
 Le scénario est maintenant disponible dans Katalon, il faut maintenant le transformer en script EOA.
 
@@ -269,7 +269,7 @@ Le scénario est maintenant disponible dans Katalon, il faut maintenant le trans
 
 Depuis la console Katalon, cliquer sur "Export", au format "C# (WebDriver + MSTest) pour avoir le code exploitable par Selenium & les navigateurs. 
 
-![Screenshot(/img/docs/eoa-2-0/katalon03.png)
+![Screenshot](/img/docs/eoa-2-0/katalon03.png)
 
 Rechercher ensuite la fonction `public void TheEOATest` ou équivalent, et sauvegarder les fonctions de type `driver.FindElement`, qui correspondent à votre scénario. Dans notre cas ce sera :
 
