:speech_balloon: Fix news

--- a/_posts/news/fr/2021-02-17-CERTFR-2021-CTI-004.md
+++ b/_posts/news/fr/2021-02-17-CERTFR-2021-CTI-004.md
@@ -10,7 +10,7 @@ permalink: /fr/news/:title
 
 # Présentation
 
-Le CERTFR, a publié le 15/03 un bulletin de sécurité présentant la campagne d'attaque en cours ciblant les serveurs de supervision Centreon [CERTFR-2021-CTI-004](https://www.cert.ssi.gouv.fr/cti/CERTFR-2021-CTI-004/.
+Le CERTFR, a publié le 15/03 un bulletin de sécurité présentant la campagne d'attaque en cours ciblant les serveurs de supervision Centreon [CERTFR-2021-CTI-004](https://www.cert.ssi.gouv.fr/cti/CERTFR-2021-CTI-004/).
 
 Centreon ayant un fonctionnement similaire au produit EyesOfNetwork sponsorisé par Axians, nous devons rester vigilants sur la présence des failles de sécurité exploitées lors de cette attaque massive.
 
