--- a/_posts/security/en/2021-03-03-RCE.md
+++ b/_posts/security/en/2021-03-03-RCE.md
@@ -5,6 +5,7 @@ desc: "Remote Command Execution in lilac"
 localisation: "exporter/engines/nagios/NagiosExportEngine.php"
 parametre: "input"
 niveau: "Critical"
+status: "fixed"
 ref: RCE
 categories: [security, EyesOfNetwork]
 lang: en
@@ -26,8 +27,8 @@ We have no knowledge of an exploit today.
 
 ## Fixed Version(s)
 
-None.
+[EON 5.3-11](https://github.com/EyesOfNetworkCommunity/eonweb/releases/tag/5.3-11)
 
-## Correction
+## Fix
 
-Download the last modifications on the "[security](https://github.com/EyesOfNetworkCommunity/lilac/tree/security)" branch.
+Download latest EON fixed version.
