--- a/_posts/security/en/2021-03-03-XSS2.md
+++ b/_posts/security/en/2021-03-03-XSS2.md
@@ -5,6 +5,7 @@ desc: "XSS exploit in lilac"
 localisation: "export.php + autodiscovery.php"
 parametre: "input"
 niveau: "Medium"
+status: "fixed"
 ref: XSS-2
 categories: [security, EyesOfNetwork]
 lang: en
@@ -26,8 +27,8 @@ We have no knowledge of an exploit today.
 
 ## Fixed Version(s)
 
-None.
+[EON 5.3-11](https://github.com/EyesOfNetworkCommunity/eonweb/releases/tag/5.3-11)
 
 ## Fix
 
-Download the last modifications on the "[security](https://github.com/EyesOfNetworkCommunity/lilac/tree/security)" branch.
+Download latest EON fixed version.
