--- a/_posts/security/fr/2020-08-02-CSRF.md
+++ b/_posts/security/fr/2020-08-02-CSRF.md
@@ -5,6 +5,7 @@ desc: "Faille CSRF dans eonweb"
 localisation: "module/module_frame/index.php"
 parametre: "url"
 niveau: "Low"
+status: "not fixed"
 ref: CSRF-1
 categories: [security, EyesOfNetwork]
 lang: fr
