--- a/_posts/security/fr/2021-03-03-RCE.md
+++ b/_posts/security/fr/2021-03-03-RCE.md
@@ -5,6 +5,7 @@ desc: "Remote Command Execution dans lilac"
 localisation: "exporter/engines/nagios/NagiosExportEngine.php"
 parametre: "input"
 niveau: "Critical"
+status: "fixed"
 ref: RCE
 categories: [security, EyesOfNetwork]
 lang: fr
@@ -26,8 +27,8 @@ Nous n'avons aucune connaissance d'une exploitation de cette faille à ce jour.
 
 ## Versions patchées
 
-Non patchée.
+[EON 5.3-11](https://github.com/EyesOfNetworkCommunity/eonweb/releases/tag/5.3-11)
 
 ## Correction
 
-Télécharger les modifications de la branche "[security](https://github.com/EyesOfNetworkCommunity/lilac/tree/security)".
+Télécharger la dernière version d'EON patchée.
