--- a/_posts/security/fr/2020-08-02-XSS.md
+++ b/_posts/security/fr/2020-08-02-XSS.md
@@ -5,6 +5,7 @@ desc: "Faille XSS dans eonweb"
 localisation: "module/module_frame/index.php"
 parametre: "url"
 niveau: "Medium"
+status: "fixed"
 ref: XSS-1
 categories: [security, EyesOfNetwork]
 lang: fr
