--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -68,7 +68,7 @@ $GUI_Equipement_InEON : Nom de votre hôte Windows sur EON
 
 Dans l’exemple, le poste a la version 32 bits de Firefox d’installé.
 
-![Screenshot](D/img/docs/eoa-2-0/cscr6.png)
+![Screenshot](/img/docs/eoa-2-0/cscr6.png)
 
 * Enfin, renommez le $Hostname :
 
