--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -11,11 +11,11 @@ permalink: /fr/docs/eoa/2_0
 
 **⚠ Documentation en cours de rédaction ⚠**
 
-- [Prérequis](#prérequis)
-- [Installation](#installation)
-  * [EOA](#eoa)
-  * [Configuration SSH](#configuration-ssh)
-  * [Configuration d’Eyes Of Network](#configuration-d-eyes-of-network)
+- [Prérequis](#Prérequis)
+- [Installation](#Installation)
+  * [EOA](#EOA)
+  * [Configuration SSH](#Configuration-SSH)
+  * [Configuration d’Eyes Of Network](#Configuration-d-EyesOfNetwork)
   * [Selenium](#selenium)
     + [PowerShell - DotNet](#powershell---dotnet)
     + [C# Packages](#c--packages)
@@ -106,7 +106,7 @@ Il vous faut créer cette paire de clés, pour ce faire rendez-vous sur votre se
 
 * Supprimez la clé envoyé initialement du serveur EON pour ne garder que la nouvelle clé dans *C:\Axians\EOA\sshkey*
 
-### Configuration d’Eyes Of Network
+### Configuration d’EyesOfNetwork
 
 Maintenant, il faut configurer EON pour qu’il récupère les informations venant d’EOA.
 
@@ -307,4 +307,21 @@ $cmd = Measure-Command {
   $WebDriver.FindElementByLinkText("Télécharger").Click();
 }
 $Chrono += [math]::Round($cmd.TotalSeconds,6)
+```
 
+#### Liste d'actions EOA
+
+Lors de la construction de scénarios EOA Web, nous retrouvons régulièrement les mêmes champs
+Ci-après une liste non exhaustive :
+
+| Action | Description |
+|:------ |:----------- |
+| `start-sleep -s 2` | Pause de 2 secondes |
+| `AddValues "INFO" "My Tasks";` | Ajout d’un log de type « Info » |
+| `$WebDriver.FindElementById("username").Click();` | Click sur le champ de type « ID » « username » |
+| `$WebDriver.FindElementById("username").Clear();` | Effacement du champ « username » |
+| `$WebDriver.FindElementById("username").SendKeys($Login);` | Ecriture dans le champ « username » |
+| `$WebDriver.FindElementByXPath("//div[@id='mydiv'").Click();` | Click sur un champ de type « XPath » |
+| `$WebDriver.SwitchTo().frame(0);` | Changer de frame |
+| `$WebDriver.switchTo().defaultContent();` | Revenir sur la frame initiale |
+| `WaitForElement "//li/div/div" $ImgTimeout -ByXPath –IsClickable` | Recherche d’élément de type XPath, et verification qu’il est bien clickable |
